# PRESENT-cipher

./: README.md  pyproject.toml  requirements.txt  setup.py
gmac/: pyGMAC.py
gmac/util/: galue_fields.py
present/: __init__.py  miniPresent.py  pyPresent.py
tests/: GMACTest.py  miniPresentTest.py  results.txt
